syntax = "proto3";

package ratest.auth;

option go_package = "github.com/DANazavr/RATest/protos/gen/go/ratest/auth;auth";

service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc TokenRefresh(TokenRefreshRequest) returns (TokenRefreshResponse);
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string role = 4;
}

message RegisterResponse {
    string message = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message TokenRefreshRequest {
    string refresh_token = 1;
}

message TokenRefreshResponse {
    string access_token = 1;
    string refresh_token = 2;
}